<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:toolbarStyle = "@style/ToolbarStyle"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:titleTextColor="@android:color/holo_blue_dark"
        android:textAppearance = "@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:textAlignment="center"
        android:layout_marginBottom="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#FF0099CC"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:lineSpacingExtra="4dp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/sat_stats_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sat_stats"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#FF0099CC" />
        <TextView
            android:id="@+id/SATTakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text= "@string/sat_takers_label"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SAT_MathScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/math_average"
                android:gravity="center" />

            <TextView
                android:id="@+id/SAT_ReadingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text = "@string/critical_reading_average"
                android:gravity="center" />

            <TextView
                android:id="@+id/SAT_WritingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text = "@string/writing_average"
                android:gravity="center" />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
